# OrionAgent

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  test_minimal.py
.agent/skills/testing_skill/: SKILL.md
examples/: assistant.py  complex_assistant.py  local_llm.py  multi_agent_chat.py  single_agent_chat.py
memory/chroma_db/: chroma.sqlite3
orion_data/rag_db/: chroma.sqlite3
orionagent/: __init__.py  chat.py  tracing.py
orionagent/agents/: base_agent.py  guards.py  handoff.py  hitl.py  manager.py
orionagent/agents/strategies/: __init__.py  base.py  direct.py  planning.py  self_learn.py
orionagent/knowledge/: knowledge_base.py
orionagent/knowledge/loaders/: base.py  markdown_loader.py  pdf_loader.py
orionagent/memory/: __init__.py  base.py  config.py  manager.py  session.py
orionagent/memory/storage/: in_memory.py  (+2 more)
orionagent/models/: __init__.py  anthropic_provider.py  base_provider.py  gemini_provider.py  model.py  ollama_provider.py  openai_provider.py  provider_registry.py
orionagent/tools/: __init__.py  base_tool.py  decorator.py  file_manager.py  handoff_tool.py  manager_tools.py  memory_tools.py  python_sandbox.py  rag_tools.py  system_tools.py  terminal.py  tool_executor.py  web_browser.py
test/: hard_test.py
test/hard_tests/: manager_concurrency.py  manager_efficiency.py  manager_handoff.py  manager_hitl_security.py  manager_lead_gen.py  manager_news_analyst.py  single_agent_persona.py  single_agent_rag.py  single_agent_sandbox.py
tests/: test_concurrency.py  test_observability.py  test_priority.py  test_temperature.py
