[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orionagent"
version = "0.1.1"
description = "A lightweight Python framework for building AI agents with tools, sessions, and flexible memory."
authors = [{name="OrionAI"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "pydantic",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["orionagent*"]
