[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orionagent"
version = "0.2.6"
description = "A lightweight Python framework for building AI agents with tools, sessions, and flexible memory."
authors = [{name="Samir Lade"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "pydantic",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "chromadb>=0.5",
    "anthropic>=0.30.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["orionagent*"]
